@@ -1,6 +1,8 @@
 #ifndef LX86_ARCH_ERRNO_H
 #define LX86_ARCH_ERRNO_H
 
+/*@ignore@*/
+
 #define	EPERM		 1	/* Operation not permitted */
 #define	ENOENT		 2	/* No such file or directory */
 #define	ESRCH		 3	/* No such process */
@@ -133,5 +135,7 @@
 #define ENOIOCTLCMD     515	/* No ioctl command */
 
 #endif
+
+/*@end@*/
 
 #endif
